<resources>
    <string name="app_name">AppSOSAFE</string>
    <string name="map_title">Mapa</string>
    <string name="favorite_title">Favoritos</string>
    <string name="options_title">Opciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="frag_map_error_get_current_location">Error al tratar de obtener su localización actual, revise si tiene la localización activa</string>
    <string name="frag_map_fine_permission_denied_activate_manually">Permiso rechazado, ir a ajustes y activarlo manual</string>
    <string name="frag_map_msg_info_permission">Para el correcto funcionamiento de la app debes activar el permiso de localización</string>
    <string name="main_error_get">Error al obtener los datos de la petición</string>
    <string name="main_error_unkown">Error desconocido</string>
    <string name="frag_map_msg_warning_sv_submit">El texto no puede estar vacío</string>
    <string name="frag_map_msg_error_location_sv_submit">Error con la localización por favor revisa los permisos</string>
    <string name="frag_map_list_pois_empty">Los datos están vacíos</string>
    <string name="address_img">Dirección</string>
    <string name="star_img">Puntuación del lugar</string>
    <string name="tv_show_info_savepoi">¿Guardar lugar como favorito?</string>
    <string name="sw_save_text">Sí</string>
    <string name="sw_not_save_text">No</string>
    <string name="frag_map_contentdescription_imgpoi">Imagen de muestra del sitio</string>
    <string name="item_img_profile">Foto de perfil</string>

    <string name="example">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="item_dont_have_reviews">No exiten comentarios relacionados con la ubicación</string>
    <string name="description_img_photo">Foto del lugar</string>
    <string name="dialog_delete_title">¿Eliminar lugar de favoritos?</string>
    <string name="dialog_delete_confirm">Eliminar</string>
    <string name="sv_hint_query_mapfragment">asfasffsaasffas</string>
    <string name="map_fragment_hint_searchview">Ejemplo: restaurant</string>
</resources>