<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_padding_min">

        <ImageView
            android:id="@+id/itemImgProfile"
            android:layout_width="@dimen/item_review_img_profile_photo_size"
            android:layout_height="@dimen/item_review_img_profile_photo_size"
            android:contentDescription="@string/item_img_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lyContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_min"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/itemImgProfile"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/itemTvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="@integer/max_lenght_person_name_item_review"
                android:maxLines="@integer/one_max_line"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/black"
                android:textSize="@dimen/item_review_text_name_size"
                tools:text="Javier Alfonso Santiago Salazar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_container_closer"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/itemTvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="@integer/max_lenght_time_review_item_review"
                    android:maxLines="@integer/one_max_line"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/text_color_item_review"
                    android:textSize="@dimen/item_review_text_time_size"
                    tools:text="Hace 3 semanas" />

                <ImageView
                    android:id="@+id/imgStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_min"
                    android:background="@drawable/ic_star_rate_yellow"
                    android:contentDescription="@string/star_img" />

                <TextView
                    android:id="@+id/tvRatingReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="@integer/max_lenght_rating_review_item_review"
                    android:maxLines="@integer/one_max_line"
                    android:textColor="@color/text_color_item_review"
                    android:textSize="@dimen/item_review_text_time_size"
                    tools:text="4.5" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:ellipsize="end"
                android:maxLines="@integer/item_review_maxlines_review"
                android:scrollbars="vertical"
                android:textColor="@color/text_color_text_review"
                tools:text="@string/example" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/common_padding_min"
            android:background="@color/color_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyContainer"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>